[project]
name = "pyweek37"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anonymous4045", email = "github@anon4045.email" }
]
dependencies = [
    "arcade>=3.0.0.dev25",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyweek37"]
