[tool.poetry]
name = "pyweek37"
version = "0.1.0"
description = ""
authors = ["Anonymous4045 <github@anon4045.email>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
